# xray-rs

./: .gitignore  .goreleaser.yaml  .goreleaser_hook.sh  AGENTS.md  Cargo.toml  Cross.toml  Makefile  README.en.md  README.md  build.rs
.github/workflows/: release.yaml
doc/: mesh.md  mpsp.md  proxy.md
docs/: arch.en.md  arch.zh.md  usage.en.md  usage.zh.md
example/: config.json  config.yaml  dns_config.json  example-client.yaml  example-grpc-client.yaml  example-grpc-server.yaml  example-grpc-tls-client.yaml  example-grpc-tls-server.yaml  example-lb-client.yaml  example-rsdns.yaml  example-server.yaml  example-tcp-client.yaml  example-ws-client.yaml  example-ws-reverse-client.yaml  example-ws-reverse-server.yaml  example-ws-server.yaml  example-xhttp-client.yaml  example-xhttp-server.yaml
example/tokio/: readme.md
hack/: download.sh
proto/: grpc_transport.proto
src/: build_info.rs  lib.rs  main.rs
src/app/: inbound.rs  mod.rs  outbound.rs  sink.rs  source.rs
src/command/: config.rs  mod.rs  root.rs  run.rs  version.rs
src/common/: common.rs  domain_trie.rs  forward.rs  ip_trie.rs  mod.rs  parse.rs  routing.rs  sniff.rs  socks.rs  stats.rs  tls.rs  trie.rs
src/proxy/: api.rs  black.rs  dokodemo.rs  http.rs  mod.rs  reverse.rs  socks.rs  trojan.rs  tun.rs  vless.rs
src/route/: cache.rs  dns.rs  matcher.rs  mod.rs  resolver.rs  router.rs  trie.rs
src/transport/: balancer.rs  grpc.rs  http.rs  mod.rs  pool.rs  raw.rs  sock.rs  sockopt.rs  tcp.rs  tls.rs  websocket.rs  xhttp.rs
tests/e2e/: go.mod  main.go  run_tests.sh  test-freedom.json  test-server.json  test_dns.go  test_grpc_tls_trojan.go  test_grpc_trojan.go  test_loadbalancer.go  test_tcp_trojan.go  test_ws_trojan.go
tests/e2e/testdata/: ads.txt  cn.txt
ui/: .metadata  prd.md  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/lib/: app.dart  main.dart
ui/lib/constants/: app_colors.dart
ui/lib/screens/: home_screen.dart  placeholder_settings_screen.dart  profile_screen.dart  routing_settings_screen.dart  subscription_settings_screen.dart
ui/lib/services/: api_service.dart  core_service.dart  rule_file_service.dart
ui/lib/utils/: logger.dart
ui/lib/widgets/: custom_button.dart
ui/linux/runner/: my_application.cc
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/test/: widget_test.dart
ui/windows/runner/: Runner.rc
