[package]
name = "xray-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.32"
bytes = "1.10.1"
clap = { version = "4.6", features = ["derive"] }
sha2 = "0.11.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9.34", features = [] }
uuid = { version = "1.22", features = ["std", "v4"] }
mimalloc = { version = "0.1.48", optional = true }
parking_lot = { version = "0.12.5" }
base64 = { version = "0.22.1" }
# runtime
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "ring"] }
hickory-resolver = { version = "0.25.2", default-features = false, features = [
  "system-config",
  "tokio",
  "rustls-platform-verifier",
] }
aws-lc-rs = { version = "*", optional = true }
tokio = { version = "1.49.0", features = ["io-std", "net", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18" }
async-stream = "0.3.6"
ahash = "0.8.12"
rustls = "0.23.37"
rustls-native-certs = { version = "0.8.3", features = [] }
rustls-pemfile = { version = "2.2.0", features = [] }
x509-parser= "0.18.1"
tun = { version = "0.8.6", features = ["async"], optional = true }
etherparse = "0.19.0"
tikv-jemallocator = { version = "0.6", optional = true }
socket2 = "0.6"
hyper-util = "0.1"
http-body-util = "0.1"
http = "1.4"
hyper = { version = "1.8", features = ["server", "http1"] }
tonic = { version = "0.14.2", features = ["gzip"] }
tonic-prost = "0.14"
prost = "0.14"
tower = "0.5"
env_logger = "0.11"
log = "0.4"
ring = "0.17.14"
rand = "0.10"
tokio-tungstenite = "0.29"
httparse = "1.10.1"
thiserror = "2.0"
hickory-proto = "0.25"
lru = "0.16"
ipnet = "2.12"
url = "2.5"
time = { version = "0.3", features = ["formatting", "local-offset"] }
pin-project-lite = "0.2.17"

[[bin]]
name = "rsdns"
path = "src/bin/rsdns/main.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = true
debug-assertions = false
codegen-units = 1

[profile.release-with-symbols]
inherits = "release"
strip = false

[features]
default = ["aws-lc-rs", "jemalloc", "tun"]
tun = ["dep:tun"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]
aws-lc-rs = [
  "dep:aws-lc-rs",
  "tokio-rustls/aws-lc-rs",
  "rcgen/aws_lc_rs",
  "hickory-resolver/tls-aws-lc-rs",
  "hickory-resolver/https-aws-lc-rs",
]
ring = ["tokio-rustls/ring", "rcgen/ring", "hickory-resolver/tls-ring", "hickory-resolver/https-ring"]
